data/derived/comb/progs/unify/prog8905.ml.out
Characters 73-74:
  | [h::t] -> h + sumList t;;
                          ^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
